Routing_osp/svc.yaml
echo "
apiVersion: v1
kind: Service
metadata:
  labels:
    app: routing-osp
  name: routing-osp-svc
spec:
  ports:
  - port: 1000
    name: port1000
    protocol: TCP
    targetPort: 1000
  - port: 2000
    name: port2000
    protocol: TCP
    targetPort: 2000
  - port: 3000
    name: port3000
    protocol: TCP
    targetPort: 3000
  - port: 4000
    name: port4000
    protocol: TCP
    targetPort: 4000
  - port: 5000
    name: port5000
    protocol: TCP
    targetPort: 5000
  - port: 6000
    name: port6000
    protocol: TCP
    targetPort: 6000
  - port: 8774
    name: port8774
    protocol: TCP
    targetPort: 8774
  selector:
    app: routing-osp

---
apiVersion: v1
kind: Endpoints
metadata:
  name: routing-osp-svc
subsets:
  - addresses:
      - ip: 192.168.63.100
    ports:
      - port: 1000
        name: port1000
  - addresses:
      - ip: 192.168.63.100
    ports:
      - port: 2000
        name: port2000
  - addresses:
      - ip: 192.168.63.100
    ports:
      - port: 3000
        name: port3000
  - addresses:
      - ip: 192.168.63.100
    ports:
      - port: 4000
        name: port4000
  - addresses:
      - ip: 192.168.63.100
    ports:
      - port: 5000
        name: port5000
  - addresses:
      - ip: 192.168.63.100
    ports:
      - port: 6000
        name: port6000
  - addresses:
      - ip: 192.168.63.100
    ports:
      - port: 8774
        name: port8774
" | kubectl apply -f - -n kong
