Routing_osp/ingress.yaml
# kubectl patch -n kong ingress routing-osp-ingress -p '{"metadata":{"annotations":{"konghq.com/strip-path":"true"}}}'
echo "
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routing-osp-ingress
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /osp/1000
        pathType: ImplementationSpecific
        backend:
          service:
            name: routing-osp-svc
            port:
              number: 1000
      - path: /osp/2000
        pathType: ImplementationSpecific
        backend:
          service:
            name: routing-osp-svc
            port:
              number: 2000
      - path: /osp/3000
        pathType: ImplementationSpecific
        backend:
          service:
            name: routing-osp-svc
            port:
              number: 3000
      - path: /osp/4000
        pathType: ImplementationSpecific
        backend:
          service:
            name: routing-osp-svc
            port:
              number: 4000
      - path: /osp/5000
        pathType: ImplementationSpecific
        backend:
          service:
            name: routing-osp-svc
            port:
              number: 5000
      - path: /osp/6000
        pathType: ImplementationSpecific
        backend:
          service:
            name: routing-osp-svc
            port:
              number: 6000
      - path: /osp/8774
        pathType: ImplementationSpecific
        backend:
          service:
            name: routing-osp-svc
            port:
              number: 8774
" | kubectl apply -f - -n kong
